@@ -1,30 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-  <title>GXemul: Machines: mvme187</title>
-  <meta name="robots" content="noarchive,nofollow,noindex">
-</head>
-<body>
 
-<!-- 10 lines header.  -->
-
-<h1>GXemul: Machines: <tt>mvme187</tt></h1>
-<hr><p>
-
-<a href="../">Back to the index.</a>
-<p><a href="../machines.html">Back to the machine index.</a>
-
-
-<h2><tt>mvme187</tt> machine</h2>
-
-<!-- This file is AUTOMATICALLY GENERATED! Do not edit. -->
-<pre>  (unnamed machine)  [MVME187]
-  \-- mainbus0
-      |-- ram0  (64 MB at offset 0)
-      |-- rom0  (4 MB at offset 0xff800000)
-      \-- <a href="../components/component_m88k_cpu.html">cpu0</a>  (Motorola 88100, 50 MHz)
-</pre>
 The <tt>mvme187</tt> machine is a
 <a href="http://en.wikipedia.org/wiki/VMEbus">VMEbus</a> based machine with a
 <a href="../components/component_m88k_cpu.html">Motorola 88100 CPU</a>.
